removed unused maven properties